spring-petclinic/kustomize/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: petclinic
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: petclinic
    spec:
      containers:
      - name: petclinic
        image: registry.nebula-west.k8s.lab/morrism/spring-petclinic:148a8572
        ports:
        - containerPort: 8080
