spring-petclinic/kustomize/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
spec:
  ingressClassName: traefik
  rules:
  - host: "petclinic.nebula-west.k8s.lab"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic
            port:
              number: 8080
